--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -34,7 +34,7 @@ block content
         ul 
           each ltri, tri in tris
             li 
-              a.btn-link-scckie.text-light(href=HOST+"/" + NavLinks[LANG]["cook"] + year + "/" + tri)
+              a.btn-link-science.text-light(href=HOST+"/" + NavLinks[LANG]["cook"] + year + "/" + tri)
                 h6 !{ltri}
   else if LANG=="en"
     h1.text-center All of Science Cookies' Cookies
@@ -48,6 +48,6 @@ block content
         ul 
           each ltri, tri in tris
             li 
-              a.btn-link-scckie.text-light(href=HOST+"/" + NavLinks[LANG]["cook"] + year + "/" + tri)
+              a.btn-link-science.text-light(href=HOST+"/" + NavLinks[LANG]["cook"] + year + "/" + tri)
                 h6 !{ltri}
 
