--- a/src/content/drafts.pug
+++ b/src/content/drafts.pug
@@ -50,7 +50,7 @@ block precontent
   //- Side toolbar
   .tbar.tbar-right.btn-toolbar.mb-3(role='toolbar')
     .btn-group-vertical.mr-2.btn-group-lg(role='group')
-      button#btnPlus.btn.btn-scckie(type='button')
+      button#btnPlus.btn.btn-science(type='button')
         i.fas.fa-plus
 
 block content
