--- a/src/includes/foot.pug
+++ b/src/includes/foot.pug
@@ -1,4 +1,4 @@
-.share.bg-sc
+.share
     a(data-toggle="collapse" href="#shareBtns" role="button" aria-expanded="false" aria-controls="shareBtns")
         i.fas.fa-share
     #shareBtns.collapse
@@ -9,7 +9,7 @@
         a#waShare(target="_blank" rel="external")
             i.fab.fa-whatsapp
 
-.follow-us.bg-scinfo
+.follow-us.bg-blue
     .row 
         a(href="//twitter.com/intent/follow?screen_name=_sciencecookies" target="_blank" rel="external") 
             i.fab.fa-twitter(style="color: #1da1f2;")
@@ -18,7 +18,7 @@
         a(href="http://www.facebook.com/Science-Cookies-106549557818780/" target="_blank" rel="external")
             i.fab.fa-facebook(style="color: #3b5998;")
 
-footer.bg-scinfo
+footer.bg-blue
     .row.align-items-end
         .col-md-auto
             img(src=HOST+'/img/wlogoT.svg' width='70' height='70' alt='Science Cookies Logo')
