--- a/src/includes/banner.pug
+++ b/src/includes/banner.pug
@@ -2,8 +2,8 @@
     .col-10.col-sm-5.col-xl-3
         img.w-100(src=HOST+'/img/logoT.svg' alt='Science Cookies Logo' loading='lazy')
     .col-12.col-sm-6.col-xl-4
-        h1.text-center(style='font-size: 2.8rem;') SCIENCE COOKIES
+        h1.title.v1.text-center(style='font-size: 2.8rem;') SCIENCE COOKIES
         if LANG=="es" 
-            h2.text-center(style='font-size: 1rem;') Artículos de ciencia con chispas de chocolate
+            h2.title.v2.text-center(style='font-size: 1rem;') Artículos de ciencia con chispas de chocolate
         else if LANG=="en" 
-            h2.text-center(style='font-size: 1rem;') Science articles with chocolate chips
+            h2.title.v2.text-center(style='font-size: 1rem;') Science articles with chocolate chips
