--- a/src/includes/bottom.pug
+++ b/src/includes/bottom.pug
@@ -1,36 +1,3 @@
-//- Firebase app
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-app.js')
-    //- Firebase features
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-auth.js')
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-analytics.js')
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-database.js')
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-firestore.js')
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-functions.js')
-    script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-storage.js')
-    //- Initialize Firebase
-    script.
-        //- Your web app's Firebase configuration
-        var firebaseConfig={
-            apiKey: "AIzaSyCc5LmjPpufLuHzR6RiXR7awOdGuWpztTk",
-            authDomain: "sciencecookies.net",
-            databaseURL: "https://science-cookies.firebaseio.com",
-            projectId: "science-cookies",
-            storageBucket: "science-cookies.appspot.com",
-            messagingSenderId: "906770471712",
-            appId: "1:906770471712:web:c7a2c16bac19b6c2d7d545",
-            measurementId: "G-1MYVREMBFV"
-        };
-        //- Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-
-//- FirebaseUI
-    script(src='https://www.gstatic.com/firebasejs/ui/'+FBUIVERSION+'/firebase-ui-auth__es.js')
-    link(type='text/css' rel='stylesheet' href='https://www.gstatic.com/firebasejs/ui/'+FBUIVERSION+'/firebase-ui-auth.css')
-
 //- Bootstrap
+script(src=HOST+"/vendor/jquery-3.6.0.min.js")
 script(src=HOST+"/vendor/bootstrap/bootstrap.bundle.min.js")
-//-
-    script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
-    script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js' integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN' crossorigin='anonymous')
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js' integrity='sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s' crossorigin='anonymous')
