--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -1,5 +1,4 @@
-//- Navbar
-nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
+nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-science
     img.d-inline-block.align-center.mr-2(src=HOST+'/img/wlogoT.svg' width='30' height='30' alt='Science Cookies Logo')
     a.navbar-brand(href=HOST+'/') Science Cookies
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarM' aria-controls='navbarM' aria-expanded='false' aria-label='Toggle navigation')
@@ -42,22 +41,22 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
             //- document.cookie = "firebase-language-override=es; path=/; expires='+expireLangCookie.toUTCString()+'";
             if site=="index"
                 if LANG=="es"
-                    button#changeLang.btn.btn-link.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/en/"+location.search')
+                    button#changeLang.btn.btn-link-science.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/en/"+location.search')
                         | English 
                         i.fas.fa-globe
                 else if LANG=="en"
-                    button#changeLang.btn.btn-link.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/es/"+location.search')
+                    button#changeLang.btn.btn-link-science.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/es/"+location.search')
                         | Español 
                         i.fas.fa-globe
             else
                 //-if site!="cookie" && site!="cal" && site!="allCalsM" && site!="allCalsY" && site!="cook" && site!="cookTri"
                 if site!="cookie" && site!="cal"
                     if LANG=="es"
-                        button#changeLang.btn.btn-link.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/'+NavLinks["en"][site]+'"+location.search')
+                        button#changeLang.btn.btn-link-science.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/'+NavLinks["en"][site]+'"+location.search')
                             | English 
                             i.fas.fa-globe
                     else if LANG=="en"
-                        button#changeLang.btn.btn-link.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/'+NavLinks["es"][site]+'"+location.search')
+                        button#changeLang.btn.btn-link-science.text-light.text-decoration-none(onclick='window.location.href="'+HOST+'/'+NavLinks["es"][site]+'"+location.search')
                             | Español 
                             i.fas.fa-globe
                 else
@@ -65,7 +64,7 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                         - lTxt="English"
                     else if LANG=="en"
                         - lTxt="Español"
-                    button#changeLang.btn.btn-link.text-light.text-decoration-none(onclick='window.location.href="'+transLink+'"+location.search')
+                    button#changeLang.btn.btn-link-science.text-light.text-decoration-none(onclick='window.location.href="'+transLink+'"+location.search')
                         | #{lTxt}
                         i.fas.fa-globe
 
