--- a/src/includes/head.pug
+++ b/src/includes/head.pug
@@ -23,3 +23,6 @@ link(rel='stylesheet' href=HOST+"/vendor/font-awesome/css/all.min.css")
 
 //- Bootstrap
 link(rel='stylesheet' href=HOST+"/vendor/bootstrap/bootstrap.min.css")
+
+//- FirebaseUI
+link(type="text/css" rel="stylesheet" href=HOST+"/vendor/firebaseui.min.css")
