--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -22,7 +22,7 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-science
                     button.btn.btn-dark.mx-2.my-1.flex-fill#usBtnsDrpdwn(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Nosotros
                 else if LANG=="en"
                     button.btn.btn-dark.mx-2.my-1.flex-fill#usBtnsDrpdwn(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Us
-                .dropdown-menu.bg-sc.px-0.mb-2.py-1(aria-labelledby="usBtnsDrpdwn" style="min-width:max-content;")
+                .dropdown-menu.bg-science.px-0.mb-2.py-1(aria-labelledby="usBtnsDrpdwn" style="min-width:max-content;")
                     .col-12.px-0.d-flex
                         if site=="who"
                             a.btn.btn-dark.mx-2.my-1.flex-fill.active(href=HOST+'/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
