--- a/src/includes/bottom.pug
+++ b/src/includes/bottom.pug
@@ -7,6 +7,7 @@ script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-database.j
 script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-firestore.js')
 script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-functions.js')
 script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-storage.js')
+script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-performance.js')
 //- Initialize Firebase
 script.
     //- Your web app's Firebase configuration
@@ -23,7 +24,8 @@ script.
     //- Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
-
+    firebase.performance();
+    
 //- FirebaseUI
 script(src='https://www.gstatic.com/firebasejs/ui/'+FBUIVERSION+'/firebase-ui-auth__es.js')
 link(type='text/css' rel='stylesheet' href='https://www.gstatic.com/firebasejs/ui/'+FBUIVERSION+'/firebase-ui-auth.css')
