--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,9 +1,9 @@
 //- Config
-- const HOST = "https://sciencecookies.net";
+- const HOST = "http://localhost:5000";
 //-   https://sciencecookies.net
 //-   http://localhost:5000
-- const FBVERSION = "8.3.2";
-- const FBUIVERSION = "4.8.0";
+- const FBVERSION = "8.10.0";
+- const FBUIVERSION = "4.8.1";
 
 - 
     const Buttons={
