contact no redirect

--- a/src/content/contact.pug
+++ b/src/content/contact.pug
@@ -19,7 +19,7 @@ block content
         .form-group.row
           label.col-sm-2.col-form-label(for='inEmail') Email
           .col-sm-10
-            input#inEmail.form-control-plaintext.text-light(type='text' readonly='' value='')
+            input#inEmail.form-control(type='text' value='name@example.com')
         .form-group.row
           label.col-sm-2.col-form-label(for='inSubj') Asunto
           .col-sm-10
