--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -14,7 +14,8 @@ block missHead
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"])
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"])
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"])
-  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"])
+  meta(property="og:url" content=HOST+'/'+NavLinks[LANG]["cook"])
+  link(rel="canonical" href=HOST+'/'+NavLinks[LANG]["cook"])
 
   title Science Cookies - #{Buttons[LANG]["cook"]}
   meta(property="og:title" content='Science Cookies - '+Buttons[LANG]["cook"])
