--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -14,7 +14,8 @@ block missHead
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+year+'/'+sTri +'/')
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
-  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"]+year+'/'+sTri +'/')
+  meta(property="og:url" content=HOST+'/'+NavLinks[LANG]["cook"]+year+'/'+sTri +'/')
+  link(rel="canonical" href=HOST+'/'+NavLinks[LANG]["cook"]+year+'/'+sTri +'/')
 
   title Science Cookies - #{Buttons[LANG]["cook"]} #{year} #{triLC}
   meta(property="og:title" content='Science Cookies - '+Buttons[LANG]["cook"]+' '+year+' '+triLC)
