--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -10,7 +10,8 @@ block missHead
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+month+'/'+file+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+month+'/'+file+'/')
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"]+month+'/'+file+'/')
-  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"]+month+'/'+file+'/')
+  meta(property="og:url" content=HOST+'/'+NavLinks[LANG]["cook"]+month+'/'+file+'/')
+  link(rel="canonical" href=HOST+'/'+NavLinks[LANG]["cook"]+month+'/'+file+'/')
 
   link(rel="stylesheet" href=HOST+"/styles/cookie.css")
 
