--- a/src/content/viewProf.pug
+++ b/src/content/viewProf.pug
@@ -5,18 +5,18 @@ block content
   ul.nav.nav-tabs
     if LANG=="es"
       li.nav-item.mx-lg-1.mx-0
-        a#navBtnPrfl.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds(1);') Su perfíl
+        a#navBtnPrfl.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("prof");') Su perfíl
       li.nav-item.mx-lg-1.mx-0
-        a#navBtnFav.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds(2);') Sus favoritos
+        a#navBtnFav.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("favs");') Sus favoritos
       li.nav-item.ml-lg-1.mr-lg-auto.mx-0
-        a#navBtnLike.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds(3);') Sus me gusta
+        a#navBtnLike.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("likes"");') Sus me gusta
     else if LANG=="en"
       li.nav-item.mx-lg-1.mx-0
-        a#navBtnPrfl.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds(1);') Their profile
+        a#navBtnPrfl.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("prof");') Their profile
       li.nav-item.mx-lg-1.mx-0
-        a#navBtnFav.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds(2);') Their favorites
+        a#navBtnFav.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("favs");') Their favorites
       li.nav-item.ml-lg-1.mr-lg-auto.mx-0
-        a#navBtnLike.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds(3);') Their likes
+        a#navBtnLike.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("likes");') Their likes
   .container-fluid.px-2
     #crdPrfl.card.text-light.border-light.bg-transparent.mt-2.d-none
       ul.list-group.list-group-flush
