--- a/src/content/viewProf.pug
+++ b/src/content/viewProf.pug
@@ -9,7 +9,7 @@ block content
       li.nav-item.mx-lg-1.mx-0
         a#navBtnFav.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("favs");') Sus favoritos
       li.nav-item.ml-lg-1.mr-lg-auto.mx-0
-        a#navBtnLike.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("likes"");') Sus me gusta
+        a#navBtnLike.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("likes");') Sus me gusta
     else if LANG=="en"
       li.nav-item.mx-lg-1.mx-0
         a#navBtnPrfl.nav-link.text-decoration-none.btn-outline-light(onclick='shwCrds("prof");') Their profile
