--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -48,7 +48,7 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                 - otLang = "en";
             - let urlText=HOST+'/';
             if site=="index"
-                - urlText+=otlang+'/';
+                - urlText+=otLang+'/';
             else
                 if site=="cookie" || site=="cal"
                     - urlText=transLink;
