--- a/src/styles/cookie.scss
+++ b/src/styles/cookie.scss
@@ -2,6 +2,11 @@
     position:relative;
     border-radius:.25rem;
 }
+
+a:not(:target){
+	//style for links in cookies
+}
+
 @media (max-width: 768px){
 	.medSimple{
 		width: 100% !important;
