--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,8 +1,5 @@
 //- Config
-- const HOST = "https://sciencecookies--pr38-code-improvements-zvasz44u.web.app";
-//-   https://sciencecookies.net
-//-   http://localhost:5000
-//-   https://sciencecookies--pr38-code-improvements-zvasz44u.web.app
+- const HOST = "https://sciencecookies.net";
 
 - 
     const Buttons={
