--- a/src/styles/_types.scss
+++ b/src/styles/_types.scss
@@ -151,28 +151,35 @@ strong,
 @font-face {
     font-family: raleway-light;
     src: url("./fonts/Raleway-Light.ttf");
+    font-display: swap;
 }
 @font-face {
     font-family: raleway-light-italic;
     src: url("./fonts/Raleway-LightItalic.ttf");
+    font-display: swap;
 }
 @font-face {
     font-family: raleway-regular;
     src: url("./fonts/Raleway-Regular.ttf");
+    font-display: swap;
 }
 @font-face {
     font-family: raleway-italic;
     src: url("./fonts/Raleway-Italic.ttf");
+    font-display: swap;
 }
 @font-face {
     font-family: raleway-bold;
     src: url("./fonts/Raleway-Bold.ttf");
+    font-display: swap;
 }
 @font-face {
     font-family: raleway-semi-bold;
     src: url("./fonts/Raleway-SemiBold.ttf");
+    font-display: swap;
 }
 @font-face {
     font-family: raleway-semi-bold-italic;
     src: url("./fonts/Raleway-SemiBoldItalic.ttf");
+    font-display: swap;
 }
