--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -28,8 +28,8 @@ html(lang=LANG)
         meta(property="og:title" content='Science Cookies - '+Buttons[LANG][site])
 
     script.
-      window.site = "#{site}";
-      window.lang = "#{LANG}";
+      site = "#{site}";
+      lang = "#{LANG}";
 
     link(rel="stylesheet" href=HOST+"/styles/main.css")
 
