--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,5 +1,5 @@
 //- Config
-- const HOST = "https://sciencecookies.net";
+- const HOST = "http://localhost:5000";
 //-     http://localhost:5000
 //-     https://sciencecookies.net
 
