--- a/next/styles/_types.scss
+++ b/next/styles/_types.scss
@@ -1,9 +1,4 @@
-$science: #791acd;
-$rebecca: rebeccapurple;
-$blue: #6c91c2;
-$latte: #fff8e7;
-$white: #f8f9fa;
-$black: #343a40;
+@import "_colors.scss";
 
 body {
     font-family: raleway-semi-bold;
