--- a/next/styles/components/navbar.module.scss
+++ b/next/styles/components/navbar.module.scss
@@ -3,3 +3,11 @@
         line-height: 2rem;
     }
 }
+
+@media (max-width: 991px) {
+    .w-nsm-100 {
+        width: 100%;
+        margin-right: 0;
+        margin-left: 0;
+    }
+}
