--- a/next/styles/main.scss
+++ b/next/styles/main.scss
@@ -30,7 +30,7 @@ body {
 .tbar {
   position: fixed;
   top: 20%;
-  width: 3pc;
+  width: 42px;
   z-index: 100020;
   background: none;
   animation-name: slideInRight;
