--- a/next/styles/main.scss
+++ b/next/styles/main.scss
@@ -63,6 +63,11 @@ body {
   display: none;
 }
 
+.btn-wide{
+  font-size: 20px;
+  line-height: 1;
+}
+
 //Bootstrap 5 - Temp
 .d-grid {
   display: grid;
